--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div><br><br><br>
             <p>This website is owned by <a href="https://instagram.com/classof2020esc">@classof2020esc</a>
             <br><br>The website will be launched soon!</p>
-            <audio autoplay loop><source src="http://samp.iv.digital/song.mp3"></source></audio>
+            <audio autoplay loop><source src="song.mp3"></source></audio>
         </div>
     </body>
 </html>
