--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <body>
         <div><br><br><br>
             <p>This website is owned by <a href="https://instagram.com/classof2020esc">@classof2020esc</a>
-            <br><br>The website will be launched soon!</p>
+            <br><br>It will be launched soon!</p>
             <audio autoplay loop><source src="song.mp3"></source></audio>
         </div>
     </body>
