--- a/index.html
+++ b/index.html
@@ -19,6 +19,23 @@
                 text-align: center;
             }
 
+            body:before
+            {
+                content: "";
+                display: block;
+                position: fixed;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                z-index: -10;
+                background: url(background.jpeg) no-repeat center center;
+                -webkit-background-size: cover;
+                -moz-background-size: cover;
+                -o-background-size: cover;
+                background-size: cover;
+            }
+
             div
             {
                 height: 180px;
@@ -49,7 +66,7 @@
     <body>
         <div><br><br><br>
             <p>This website is owned by <a href="https://instagram.com/classof2020esc">@classof2020esc</a>
-            <br><br>It will be launched soon!</p>
+            <br><br>The website will be launched soon!</p>
             <audio autoplay loop><source src="song.mp3"></source></audio>
         </div>
     </body>
